Bug 1133634 - Fix CanPlayType in GStreamer backend. r=kinetik, a=lmandel